--- a/document/Bibliography.bib
+++ b/document/Bibliography.bib
@@ -39,6 +39,25 @@
   pages={25 - 49}
 }
 
+@inproceedings{kukich1983design,
+  title={Design of a knowledge-based report generator},
+  author={Kukich, Karen},
+  booktitle={21st Annual Meeting of the Association for Computational Linguistics},
+  pages={145--150},
+  year={1983}
+}
+
+
+@article{ramos2016role,
+  title={On the role of linguistic descriptions of data in the building of natural language generation systems},
+  author={Ramos-Soto, Alejandro and Bugarín, Alberto and Barro, Senén},
+  journal={Fuzzy Sets and Systems},
+  volume={285},
+  pages={31--51},
+  year={2016},
+  publisher={Elsevier}
+}
+
 
 @article{goldberg1994using,
   title={Using natural-language processing to produce weather forecasts},
